--- a/index.html
+++ b/index.html
@@ -680,9 +680,12 @@
           items: [
             { id: 'induction', name: 'Induction', start: 0, duration: 1, type: 'project' },
             { id: 'project1', name: 'Project One (FN4004)', start: 1, duration: 5, type: 'project' },
+             { id: 'formative1', name: 'Formative Feedback (FN4004)', start: 5, duration: 0, type: 'formative', 
+              link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
+              details: "Mid-project feedback to guide your development process. This is an opportunity to receive constructive critique on your work in progress.<br><br><span class='expectations-text'>Expectations:</span> Bring your sketchbook, initial designs, and research materials. Be prepared to discuss your concept development and receive peer feedback.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
             { id: 'enrichment1', name: 'Enrichment Week', start: 6, duration: 1, type: 'project' },
             { id: 'project2', name: 'Project Two (FN4004)', start: 7, duration: 5, type: 'project' },
-            { id: 'formative1', name: 'Formative Feedback (FN4004)', start: 5, duration: 0, type: 'formative', 
+            { id: 'formative1', name: 'Formative Feedback (FN4004)', start: 9, duration: 0, type: 'formative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Mid-project feedback to guide your development process. This is an opportunity to receive constructive critique on your work in progress.<br><br><span class='expectations-text'>Expectations:</span> Bring your sketchbook, initial designs, and research materials. Be prepared to discuss your concept development and receive peer feedback.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
             { id: 'summative1', name: 'Summative Assessment (FN4004)', start: 12, duration: 0, type: 'summative', 
@@ -736,9 +739,9 @@
             { id: 'formative2_y2', name: 'Formative Feedback (FN5001)', start: 11, duration: 0, type: 'formative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Mid-project feedback focusing on your design development and concept research.<br><br><span class='expectations-text'>Expectations:</span> Present your research, concept development, and initial designs. Be prepared to explain your design rationale and research methodology.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
-            { id: 'summative1_y2', name: 'Project Submission (FN5001)', start: 12, duration: 0, type: 'summative', 
+            { id: 'summative1_y2', name: 'Summative Assessment Submission (FN5001)', start: 12, duration: 0, type: 'summative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
-              details: "Assessment of your project outcomes, contributing to your 20% Year 2 weighting.<br><br><span class='expectations-text'>Expectations:</span> Submit all project components as specified in the brief. Ensure your work demonstrates progress in both technical and conceptual development.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
+              details: "Assessment of your project outcomes, contributing to your 20% Year 2 weighting. Marking typically takes 20 working days.<br><br><span class='expectations-text'>Expectations:</span> Submit all project components as specified in the brief. Ensure your work demonstrates progress in both technical and conceptual development.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
             { id: 'winterBreak_y2', name: 'Winter Vacation', start: 13, duration: 3, type: 'project' },
             { id: 'designTutorials', name: 'Professional Practice - Project One', start: 16, duration: 2, type: 'project' },
             { id: 'formativeReview', name: 'Formative Feedback (FN5002)', start: 18, duration: 0, type: 'formative', 
@@ -746,15 +749,14 @@
               details: "Comprehensive review of your work to date with industry feedback.<br><br><span class='expectations-text'>Expectations:</span> Present your portfolio of work to date and be prepared to discuss your design direction with industry professionals. Consider how to implement their feedback in your ongoing work.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
             { id: 'enrichment2_y2', name: 'Enrichment Week', start: 18, duration: 1, type: 'project' },
             { id: 'majorProject1', name: 'Professional Practice - Project Two', start: 19, duration: 5, type: 'project' },
-            { id: 'productDev', name: 'Product Development (FN5003)', start: 19, duration: 5, type: 'project' },
-            { id: 'midPoint', name: 'Formative Feedback (FN5002)', start: 23, duration: 0, type: 'formative', 
+           { id: 'midPoint', name: 'Formative Feedback (FN5002)', start: 23, duration: 0, type: 'formative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Technical and creative feedback on your product development work.<br><br><span class='expectations-text'>Expectations:</span> Present your technical samples, prototypes, and development work. Be ready to discuss manufacturing considerations and material choices.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
             { id: 'finalSubmission_y2', name: 'Summative Submission (FN5002)', start: 24, duration: 0, type: 'summative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Final assessment of your Year 2 projects and portfolio.<br><br><span class='expectations-text'>Expectations:</span> Submit a comprehensive portfolio demonstrating your technical, creative, and professional development throughout the year. Include all project outcomes as specified in the brief.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
             { id: 'springBreak_y2', name: 'Spring Break', start: 25, duration: 3, type: 'project' },
-            { id: 'portfolioDev_y2', name: 'Portfolio Development (FN5003)', start: 28, duration: 3, type: 'project' },
+            { id: 'portfolioDev_y2', name: 'Portfolio Development (FN5004)', start: 28, duration: 3, type: 'project' },
             { id: 'historical_y2', name: 'Historical Themes Research (HA5107)', start: 1, duration: 12, type: 'project' },
             { id: 'essayPlanning_y2', name: 'Essay Planning (HA5107)', start: 16, duration: 6, type: 'project' },
             { id: 'essayWriting_y2', name: 'Essay Writing Period (HA5107)', start: 22, duration: 6, type: 'project' },
