--- a/index.html
+++ b/index.html
@@ -683,26 +683,25 @@
              { id: 'formative1', name: 'Formative Feedback (FN4004)', start: 5, duration: 0, type: 'formative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Mid-project feedback to guide your development process. This is an opportunity to receive constructive critique on your work in progress.<br><br><span class='expectations-text'>Expectations:</span> Bring your sketchbook, initial designs, and research materials. Be prepared to discuss your concept development and receive peer feedback.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
-            { id: 'enrichment1', name: 'Enrichment Week', start: 6, duration: 1, type: 'project' },
-            { id: 'project2', name: 'Project Two (FN4004)', start: 7, duration: 5, type: 'project' },
-            { id: 'formative1', name: 'Formative Feedback (FN4004)', start: 9, duration: 0, type: 'formative', 
-              link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
-              details: "Mid-project feedback to guide your development process. This is an opportunity to receive constructive critique on your work in progress.<br><br><span class='expectations-text'>Expectations:</span> Bring your sketchbook, initial designs, and research materials. Be prepared to discuss your concept development and receive peer feedback.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
-            { id: 'summative1', name: 'Summative Assessment (FN4004)', start: 12, duration: 0, type: 'summative', 
+             { id: 'summative1', name: 'Summative Assessment Submission (FN4004)', start: 6, duration: 0, type: 'summative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Final assessment of your first project work including research, development, and outcomes.<br><br><span class='expectations-text'>Expectations:</span> Submit all required deliverables as specified in the brief. Ensure your work demonstrates research, development, and final outcomes that meet the learning objectives.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
-            { id: 'winterBreak', name: 'Winter Vacation', start: 13, duration: 3, type: 'project' },
+            { id: 'enrichment1', name: 'Enrichment Week', start: 6, duration: 1, type: 'project' },
+            { id: 'project2', name: 'Project Two (FN4004)', start: 7, duration: 5, type: 'project' },
+            { id: 'formative1', name: 'Formative Feedback (FN4004)', start: 12, duration: 0, type: 'formative', 
+              link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
+              details: "Mid-project feedback to guide your development process. This is an opportunity to receive constructive critique on your work in progress.<br><br><span class='expectations-text'>Expectations:</span> Bring your sketchbook, initial designs, and research materials. Be prepared to discuss your concept development and receive peer feedback.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
+           { id: 'winterBreak', name: 'Winter Vacation', start: 13, duration: 3, type: 'project' },
             { id: 'project3', name: 'Project Three (FN4004)', start: 16, duration: 2, type: 'project' },
-            { id: 'enrichment2', name: 'Enrichment Week', start: 18, duration: 1, type: 'project' },
-            { id: 'project4', name: 'Project Four (FN4005)', start: 19, duration: 5, type: 'project' },
-            { id: 'formative2', name: 'Formative Feedback (FN4004)', start: 17, duration: 0, type: 'formative', 
+             { id: 'formative2', name: 'Formative Feedback (FN4004)', start: 18, duration: 0, type: 'formative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Development feedback for your project to help refine your direction.<br><br><span class='expectations-text'>Expectations:</span> Bring your design development work and be prepared to discuss your progress and challenges.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
-            { id: 'toile', name: 'Toile Development (FN4005)', start: 19, duration: 5, type: 'project' },
-            { id: 'formative3', name: 'Formative Feedback (FN4005)', start: 22, duration: 0, type: 'formative', 
+            { id: 'enrichment2', name: 'Enrichment Week', start: 18, duration: 1, type: 'project' },
+            { id: 'project4', name: 'Project Four (FN4004)', start: 19, duration: 5, type: 'project' },
+           { id: 'formative3', name: 'Formative Feedback (FN4004)', start: 23, duration: 0, type: 'formative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Technical feedback on your toile development and construction techniques.<br><br><span class='expectations-text'>Expectations:</span> Present your toile and technical samples. Be prepared to discuss construction decisions and technical challenges.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
-            { id: 'summative2', name: 'Summative Assessment (FN4005)', start: 24, duration: 0, type: 'summative', 
+            { id: 'summative2', name: 'Summative Assessment Submission(FN4004)', start: 24, duration: 0, type: 'summative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Final assessment of your technical development work.<br><br><span class='expectations-text'>Expectations:</span> Submit all required technical samples, toiles, and documentation as specified in the brief.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
             { id: 'springBreak', name: 'Spring Break', start: 25, duration: 3, type: 'project' },
@@ -777,29 +776,29 @@
           weeks: 33, // Total teaching weeks plus breaks
           items: [
             { id: 'induction3', name: 'Induction', start: 0, duration: 1, type: 'project' },
-            { id: 'project1_y3', name: 'Project One (FN6001)', start: 1, duration: 5, type: 'project' },
-            { id: 'enrichment1_y3', name: 'Enrichment Week', start: 6, duration: 1, type: 'project' },
-            { id: 'project2_y3', name: 'Project Two (FN6001)', start: 7, duration: 5, type: 'project' },
-            { id: 'formative1_y3', name: 'Formative Feedback (FN6001)', start: 5, duration: 0, type: 'formative', 
+            { id: 'project1_y3', name: 'Pre-Collection (FN6001)', start: 1, duration: 5, type: 'project' },
+             { id: 'formative1_y3', name: 'Formative Feedback (FN6001)', start: 5, duration: 0, type: 'formative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Critical feedback on your final year project direction and concept development.<br><br><span class='expectations-text'>Expectations:</span> Present a thorough exploration of your research, concept development, and design direction. Be prepared to articulate your unique design vision and how it fits into the contemporary fashion landscape.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
-            { id: 'summative1_y3', name: 'Project Submission (FN6001)', start: 12, duration: 0, type: 'summative', 
+            { id: 'enrichment1_y3', name: 'Enrichment Week', start: 6, duration: 1, type: 'project' },
+            { id: 'project2_y3', name: 'Pre-Collection (FN6001)', start: 7, duration: 5, type: 'project' },
+             { id: 'formative1_y3', name: 'Formative Feedback (FN6001)', start: 11, duration: 0, type: 'formative', 
+              link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
+              details: "Critical feedback on your final year project direction and concept development.<br><br><span class='expectations-text'>Expectations:</span> Present a thorough exploration of your research, concept development, and design direction. Be prepared to articulate your unique design vision and how it fits into the contemporary fashion landscape.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
+            { id: 'summative1_y3', name: 'Summative Assessment Submission (FN6001)', start: 12, duration: 0, type: 'summative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Assessment of your first final-year project, contributing to your 80% weighting.<br><br><span class='expectations-text'>Expectations:</span> Submit a professional-quality project that demonstrates your readiness for industry. Your work should reflect a personal design philosophy and innovative approach.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
             { id: 'winterBreak_y3', name: 'Winter Vacation', start: 13, duration: 3, type: 'project' },
-            { id: 'designTutorials_y3', name: 'Design Process Tutorials (FN6001)', start: 16, duration: 2, type: 'project' },
-            { id: 'enrichment2_y3', name: 'Enrichment Week', start: 18, duration: 1, type: 'project' },
-            { id: 'majorProject1_y3', name: 'Major Project Phase 1 (FN6001)', start: 19, duration: 5, type: 'project' },
-            { id: 'formativeReview_y3', name: 'Formative Review (FN6001)', start: 17, duration: 0, type: 'formative', 
+            { id: 'designTutorials_y3', name: 'Final Collection (FN6004)', start: 16, duration: 2, type: 'project' },
+             { id: 'formativeReview_y3', name: 'Formative Feedback (FN6004)', start: 17, duration: 0, type: 'formative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Industry-facing review of your collection development and professional portfolio.<br><br><span class='expectations-text'>Expectations:</span> Present your collection concept, development, and professional portfolio to industry representatives. Be prepared to discuss your work in a professional context and respond to industry-level feedback.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
-            { id: 'productDev_y3', name: 'Product Development (FN6004)', start: 19, duration: 5, type: 'project' },
+            { id: 'enrichment2_y3', name: 'Enrichment Week', start: 18, duration: 1, type: 'project' },
+            { id: 'majorProject1_y3', name: 'Final Collection (FN6004)', start: 19, duration: 5, type: 'project' },
+           { id: 'productDev_y3', name: 'Product Development (FN6004)', start: 19, duration: 5, type: 'project' },
             { id: 'midPoint_y3', name: 'Mid-Point Formative (FN6004)', start: 22, duration: 0, type: 'formative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Final development feedback before your summative assessment.<br><br><span class='expectations-text'>Expectations:</span> Present your nearly-completed collection, including garments, technical files, and professional portfolio. Use this opportunity to make final refinements before submission.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
-            { id: 'finalSubmission_y3', name: 'Final Project Assessment', start: 24, duration: 0, type: 'summative', 
-              link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
-              details: "Final assessment of your major project work.<br><br><span class='expectations-text'>Expectations:</span> Submit all required components as specified in the brief. Your work should demonstrate professional standards and be presentation-ready.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
             { id: 'springBreak_y3', name: 'Spring Break', start: 25, duration: 3, type: 'project' },
             { id: 'portfolioDev_y3', name: 'Final Collection & Portfolio', start: 28, duration: 3, type: 'project' },
             { id: 'historical_y3', name: 'Dissertation Research (HA6101)', start: 1, duration: 12, type: 'project' },
