--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
       </div>
       
       <div class="footer">
-        <p>Kingston School of Art - BA (Hons) Fashion Program – Learning Outcomes, Feedback and Assessment KnowledgeBase</p>
+        <p>Kingston School of Art - BA (Hons) Fashion Program – Learning Outcomes, Feedback and Assessment Knowledge Base</p>
         <p>© 2025 Kingston University</p>
       </div>
     </div>
@@ -691,7 +691,7 @@
             { id: 'formative1', name: 'Formative Feedback (FN4004)', start: 12, duration: 0, type: 'formative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Mid-project feedback to guide your development process. This is an opportunity to receive constructive critique on your work in progress.<br><br><span class='expectations-text'>Expectations:</span> Bring your sketchbook, initial designs, and research materials. Be prepared to discuss your concept development and receive peer feedback.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
-           { id: 'winterBreak', name: 'Winter Vacation', start: 13, duration: 3, type: 'project' },
+           { id: 'winterBreak', name: 'Winter Break', start: 13, duration: 3, type: 'project' },
             { id: 'project3', name: 'Project Three (FN4004)', start: 16, duration: 2, type: 'project' },
              { id: 'formative2', name: 'Formative Feedback (FN4004)', start: 18, duration: 0, type: 'formative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
@@ -741,7 +741,7 @@
             { id: 'summative1_y2', name: 'Summative Assessment Submission (FN5001)', start: 12, duration: 0, type: 'summative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Assessment of your project outcomes, contributing to your 20% Year 2 weighting. Marking typically takes 20 working days.<br><br><span class='expectations-text'>Expectations:</span> Submit all project components as specified in the brief. Ensure your work demonstrates progress in both technical and conceptual development.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
-            { id: 'winterBreak_y2', name: 'Winter Vacation', start: 13, duration: 3, type: 'project' },
+            { id: 'winterBreak_y2', name: 'Winter Break', start: 13, duration: 3, type: 'project' },
             { id: 'designTutorials', name: 'Professional Practice - Project One', start: 16, duration: 2, type: 'project' },
             { id: 'formativeReview', name: 'Formative Feedback (FN5002)', start: 18, duration: 0, type: 'formative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
@@ -788,7 +788,7 @@
             { id: 'summative1_y3', name: 'Summative Assessment Submission (FN6001)', start: 12, duration: 0, type: 'summative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Assessment of your first final-year project, contributing to your 80% weighting.<br><br><span class='expectations-text'>Expectations:</span> Submit a professional-quality project that demonstrates your readiness for industry. Your work should reflect a personal design philosophy and innovative approach.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
-            { id: 'winterBreak_y3', name: 'Winter Vacation', start: 13, duration: 3, type: 'project' },
+            { id: 'winterBreak_y3', name: 'Winter Break', start: 13, duration: 3, type: 'project' },
             { id: 'designTutorials_y3', name: 'Final Collection (FN6004)', start: 16, duration: 2, type: 'project' },
              { id: 'formativeReview_y3', name: 'Formative Feedback (FN6004)', start: 17, duration: 0, type: 'formative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
